...
    <string name="people_helping" xliff:restype="x-GENERIC/LIST/TITLE">People helping out</string>
    <!-- Label placed above the name of the research type that the user is currently contributing (the type itself can assume several names) -->
    <string name="research_type" xliff:restype="x-GENERIC/LIST/TITLE">Research type</string>
    <!-- Message placed when research type is undefined -->
    <string name="research_type_unavailable" xliff:restype="x-GENERIC/LIST/TITLE">Unavailable</string>
    <!-- Menu option to open the setup guide screen -->
    <string name="setup_guide" xliff:restype="x-GENERIC/MENU/OVERFLOW">Setup guide</string>
    <!-- Menu option to display the legal informations screen. This is also used as the title in the legal screen. -->
    <string name="legal" xliff:restype="x-GENERIC/MENU/OVERFLOW">Legal</string>
    <!-- Menu option to open the share submenu, which will show the available sharing applications (such as Facebook). -->
    <string name="share" xliff:restype="x-GENERIC/MENU/OVERFLOW">Share</string>
    <!-- Title welcoming the user to the application. Folding@Home should not be translated.  -->
    <string name="welcome" xliff:restype="x-GENERIC/LIST/TITLE">Welcome to Folding@Home</string>
    <!-- This text is placed on a Button that will open another screen with more information about Folding@Home project -->
    <string name="read_more" xliff:restype="x-GENERIC/BUTTON/1BUTTON">Read more</string>
    <!-- Title to a screen containing more information about Folding@Home project -->
    <string name="more_info" xliff:restype="x-GENERIC/SUBHEADER">More information</string>
    <!-- Text placed on a button when the setup guide is on its last page to indicate that the guide will be closed if this button is clicked -->
    <string name="finish" xliff:restype="x-GENERIC/BUTTON/3BUTTONS">Finish</string>
    <!-- Introduction information regarding Folding@Home -->
    <string name="wizard_welcome_to_folding_subtitle" xliff:restype="x-_UNLIMITED">Do you want to help find the cure for Alzheimer\'s, Parkinson\'s and cancer?</string>
    <!-- Complementary information regarding Folding@Home -->
    <string name="wizard_welcome_to_folding_text" xliff:restype="x-_UNLIMITED">Your phone can perform scientific calculations while you sleep, and help Stanford University scientists find the cure for many diseases.</string>
...
        <!-- Link to Folding@Home homepage if the user wants to read more information. (Folding@Home and folding.stanford.edu should not be translated) -->
        <item>You can find more information about Folding@Home on the homepage:\nfolding.stanford.edu</item>
    </string-array>
    <!-- Text placed above the sponsors names: 'powered by Sony, Stanford University, Vodafone' -->
    <string name="powered_by" xliff:restype="x-GENERIC/LIST/SUBTITLE">powered by</string>
    <!-- Title label to let the user know that all the personal data is safe. -->
    <string name="private_date_safe_title" xliff:restype="x-GENERIC/LIST/TITLE/ICON">Your private data is safe.</string>
    <!-- Subtitle label, to let the user know that other applications can't access the private data. -->
    <string name="private_date_safe_text" xliff:restype="x-GENERIC/LIST/SUBTITLE/ICON">This application doesn\'t access your private data.</string>
    <!-- Title label, to let the user know that the transmitted/received data is free of charge, since it will use Wi-Fi -->
    <string name="no_cost_mobile_data_title" xliff:restype="x-GENERIC/LIST/TITLE/ICON">There is no cost for mobile data</string>
    <!-- Subtitle label, to let the user know that the phone must be connected to a wi-fi network. -->
    <string name="no_cost_mobile_data_text" xliff:restype="x-GENERIC/LIST/SUBTITLE/ICON">Phone must be connected to Wi-Fi network.</string>
...
