<!--
  Licensed under the LICENSE.
  Copyright 2017, Sony Mobile Communications Inc.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/footer_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/footer_height"
        android:layout_alignParentBottom="true"
        android:background="@color/footer_gray"
        android:orientation="horizontal"
        android:paddingStart="@dimen/activity_padding_horizontal"
        android:paddingEnd="@dimen/activity_padding_horizontal">

        <TextView
            android:id="@+id/skip_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:fontFamily="sans-serif"
            android:padding="@dimen/padding_tiny"
            android:text="@string/skip"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/wizard_font_size_small" />

        <LinearLayout
            android:id="@+id/wizard_page_indicator_container"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="horizontal" >
        </LinearLayout>

        <TextView
            android:id="@+id/finish_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:padding="@dimen/padding_tiny"
            android:text="@string/finish"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/wizard_font_size_small" />
    </RelativeLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/wizard_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/footer_layout" />

</RelativeLayout>