...
                android:paddingBottom="@dimen/activity_padding_vertical"
                android:paddingStart="@dimen/activity_padding_horizontal"
                android:paddingEnd="@dimen/activity_padding_horizontal"
                android:paddingTop="@dimen/activity_padding_vertical">

    <Button
        android:id="@+id/bt_wizard_done"
        android:layout_width="@dimen/wizard_button_width"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/wizard_button_height"
        android:minWidth="@dimen/wizard_button_width"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
...
