...
        android:fontFamily="sans-seriff"
        android:gravity="center"
        android:text="@string/powered_by"
        android:textColor="@color/sony_black" />

    <Button
        android:id="@+id/bt_wizard_read_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/in_cooperation_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_x_small"
        android:layout_marginTop="@dimen/margin_small"
...
